fix(icon):fix layout problem of icon editor

--- a/src/icon/index.less
+++ b/src/icon/index.less
@@ -37,6 +37,7 @@
     padding-top: 10px;
     height: 100%;
     overflow-y: auto;
+    width: 468px;
     :hover{
       background-color: #FA6400;
       color: #fff;
